expose java.lang.reflect to guice library with manifest entry